src-ken&y/objects/GL_Type__c.object
<CustomObject>
    <customHelpPage>HelpGLType</customHelpPage>
    <fields>
        <fullName>Account_Range_From__c</fullName>
        <label>Account Range From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Range_To__c</fullName>
        <label>Account Range To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Liabilities</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Other Comprehensive Income</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Other Income (Expense)</fullName>
                </value>
                <value>
                    <fullName>Tax Provision (Benefit)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Normal_Balance__c</fullName>
        <label>Normal Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Statement_Type__c</fullName>
        <label>Statement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GL Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Type__c</columns>
        <columns>Account_Range_From__c</columns>
        <columns>Account_Range_To__c</columns>
        <columns>Statement_Type__c</columns>
        <columns>Normal_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GL Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Accounting_Range_Blank_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Account_Range_From__c) || ISBLANK( Account_Range_To__c )</errorConditionFormula>
        <errorMessage>Accounting Range To and Accounting Range From fields can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Accounting_Type_Normal_Balance_Check</fullName>
        <active>true</active>
        <description>Validating the Accounting Type and Normal Balance combinations</description>
        <errorConditionFormula>ISPICKVAL(Accounting_Type__c, &apos;Operating Expense&apos;) &amp;&amp; NOT(ISPICKVAL(Normal_Balance__c,&apos;Debit&apos;))
||
ISPICKVAL(Accounting_Type__c, &apos;Revenue&apos;) &amp;&amp; NOT(ISPICKVAL(Normal_Balance__c,&apos;Credit&apos;))
||
ISPICKVAL(Accounting_Type__c, &apos;Assets&apos;) &amp;&amp; NOT(ISPICKVAL(Normal_Balance__c,&apos;Debit&apos;))
||
ISPICKVAL(Accounting_Type__c, &apos;Liabilities&apos;) &amp;&amp; NOT(ISPICKVAL(Normal_Balance__c,&apos;Credit&apos;))
||
ISPICKVAL(Accounting_Type__c, &apos;Equity&apos;) &amp;&amp; NOT(ISPICKVAL(Normal_Balance__c,&apos;Credit&apos;))
||
ISPICKVAL(Accounting_Type__c, &apos;Cost of Goods Sold&apos;) &amp;&amp; NOT(ISPICKVAL(Normal_Balance__c,&apos;Debit&apos;))
||
ISPICKVAL(Accounting_Type__c, &apos;Tax Provision (Benefit)&apos;) &amp;&amp; NOT(ISPICKVAL(Normal_Balance__c,&apos;Debit&apos;))</errorConditionFormula>
        <errorMessage>Incorrect normal balance for selected accounting type. Please correct the normal balance or choose different accounting type for this normal balance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Accounting_Type_Value_Validation</fullName>
        <active>true</active>
        <description>Standard Accounting Types are provided in the picklist and not expecting any other value in there.</description>
        <errorConditionFormula>NOT( ISPICKVAL(Accounting_Type__c, &apos;Other Comprehensive Income&apos;) )&amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Revenue&apos;) )&amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Operating Expenses&apos;) )&amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Equity&apos;) )&amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Assets&apos;) )&amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Liabilities&apos;) ) &amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Cost of Goods Sold&apos;) )&amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Other Income (Expense)&apos;) )&amp;&amp;
NOT( ISPICKVAL(Accounting_Type__c, &apos;Tax Provision (Benefit)&apos;) )</errorConditionFormula>
        <errorMessage>This accounting type is not supported please choose from standard picklist values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Balance_Sheet_type_check</fullName>
        <active>true</active>
        <description>Validating the combinations of statement types against the selected accounting type</description>
        <errorConditionFormula>ISPICKVAL(Statement_Type__c, &apos;Balance Sheet&apos;) &amp;&amp;
NOT((ISPICKVAL(Accounting_Type__c, &apos;Assets&apos;) ||  ISPICKVAL(Accounting_Type__c, &apos;Liabilities&apos;)||
ISPICKVAL(Accounting_Type__c, &apos;Equity&apos;)))</errorConditionFormula>
        <errorMessage>Balance Sheet supports only Assets, Liabilities and Equity Accounting Types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Income_statement_type_check</fullName>
        <active>true</active>
        <description>Validating the combinations of statement types against the selected accounting type</description>
        <errorConditionFormula>ISPICKVAL(Statement_Type__c, &apos;Income Statement&apos;) &amp;&amp;
NOT((ISPICKVAL(Accounting_Type__c, &apos;Revenue&apos;) ||
ISPICKVAL(Accounting_Type__c, &apos;Other Comprehensive Income&apos;) ||  ISPICKVAL(Accounting_Type__c, &apos;Operating Expenses&apos;) ||
ISPICKVAL(Accounting_Type__c, &apos;Cost of Goods Sold&apos;) ||
ISPICKVAL(Accounting_Type__c, &apos;Other Income (Expense)&apos;) ||
ISPICKVAL(Accounting_Type__c, &apos;Tax Provision (Benefit)&apos;)
))</errorConditionFormula>
        <errorMessage>Income statement supports only Revenue/Operating Expenses/Cost of Goods Sold/Other Income (Expense)/Tax Provision (Benefit)  accounting Types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Normal_Balance_Value_Validation</fullName>
        <active>true</active>
        <description>Normal balance value can not be anything other that Credit or Debit</description>
        <errorConditionFormula>NOT(ISPICKVAL(Normal_Balance__c, &apos;Credit&apos;)) &amp;&amp;
NOT(ISPICKVAL(Normal_Balance__c, &apos;Debit&apos;))</errorConditionFormula>
        <errorMessage>Normal Balance can not be other than credit or debit</errorMessage>
    </validationRules>
</CustomObject>